Fixing z-index weirdness on mobile for download panel

--- a/assets/stylesheets/components/_slideshow.scss
+++ b/assets/stylesheets/components/_slideshow.scss
@@ -287,7 +287,7 @@
 	}
 
 	.theme-image {
-		background-color: fade-out( $color__teal, 0.8 );
+		background-color: fade-out( $color__teal, 0.2 );
 		border-radius: 150px;
 		height: 150px;
 		overflow: hidden;
